# TodoFlow

./: .gitignore  task.md
.github/workflows/: release.yml
server/: Dockerfile  README_AI_AGENT.md  docker-compose.yml  entrypoint.sh  requirements.txt
server/app/: config.py  database.py  main.py  models.py
server/tests/: test_api.py
widget/: package.json
widget/src/: app.js  index.html  style.css
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/icons/: icon.icns
widget/src-tauri/src/: main.rs
