[package]
name = "todoflow"
version = "1.0.0"
description = "Sleek Windows TodoFlow desktop widget"
authors = ["Michael"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# winreg permet de gérer le démarrage automatique dans le registre Windows de façon native
winreg = "0.50"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
